

  ChangeLog.txt for libSUFR
  
     
   52: 07/10/2011:
     - Added constants: one,c3rd,rc3rd, stdErr,StdIn,StdOut, hostname,username
     - Simplified definition of intkindmax, realkindmax so that they can be parameters,
       needed for declarations.  This will cause problems with g95 though, since quad
       precision is partly implemented
     - Declare func as external in root_solver() and minimum_solver()
     

******************************************************************************************
   51: 15/08/2011:  *** SF release v0.1.8 ***
     - 5003 lines of code
     
   50: 13/08/2011:
     - Use 'only' attributes with 'use' statements in modules almost everywhere, to
       ensure that only the intended variables and functions become available.
       Use with TheSky rev.388
     
   49: 30/07/2011:
     - Updated ChangeLog.txt, first bzr version
     
   48: bzr rev.48 = svn rev.47
   
   47: 17/07/2011:
     - Interpolate: fix module use; minor comment update
     
   46: 20/06/2011:
     - Added routines for linear interpolation to src/interpolate.f90
     - Updated compile flags for ifort
     
   45: 27/04/2011:
     - Added file src/command_line.f90: Procedures to handle command-line options and arguments:
       - get_command_argument_i(), get_command_argument_l(), get_command_argument_r(), 
         get_command_argument_d(): read a command-line variable with type int, long, real, double
     - In statistics, added: faculty_i(), faculty(), binom_coeff() and binom_prob()
     - CMake: added option to cancel compilation on warning (for gfortran, g95)

       
******************************************************************************************
   44: 25/04/2011:  *** SF release v0.1.7 ***
     - 4702 lines of code
     
   43: 25/04/2011:
     - Added file earth.f90 with distance() and distance_r()
     - Added sort_string_array() in sorting to sort an array of strings